refactor: changed content to practice CSS rules

--- a/index.html
+++ b/index.html
@@ -3,57 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning HTML</title>
+    <title>CSS Basix</title>
 </head>
 <body>
-    <h1>An overview on HTML forms</h1>
-    <form>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" placeholder="Enter your username" required>
-        <br />
-        <br />
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" placeholder="Enter your email" required>
-        <br />
-        <br />
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" placeholder="Enter your password" required>
-        <br />
-        <br />
-        <h5>Select your age radio button</h5>
-        <input type="radio" name="age" id="option-1" value="0-15 yrs">
-        
-        <label for="option-1">0-15 yrs</label>
-        <input type="radio" name="age" id="option-2" value="16-30">
-       
-        <label for="option-2">16-30 yrs</label>
-        <input type="radio" name="age" id="option-3" value="30-45">
-        <label for="option-3">30-45 yrs</label>
-        <input type="radio" name="age" id="option-4" value="46-60">
-        <label for="option-4">46-60 yrs</label>
-        <br />
-        <br />
-        <h5>Drop down option menu.</h5>
-        <label for="question">Security Question:</label>
-        <select name="question" id="question">
-            <option value="What is your pet name?">What is your pet name?</option>
-            <option value="What is your favourite color?">What is your favourite color?</option>
-            <option value="What is your favourite food?">What is your favourite food?</option>
-        </select>
-        <br /><br />
-        <label for="answer">Security question answer:</label>
-        <input type="text" name="answer" id="answer" placeholder="Enter your answer">
-        <br /><br />
+    <h1>CSS Basics</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?</p>
 
-        <h5>Textarea input method.</h5>
-        <label for="bio">Your Short Bio:</label>
-        <br />
-        <textarea name="bio" id="bio" cols="30" rows="10" placeholder="Enter your bio..."></textarea>
-        <br /><br />
-        <input type="submit" value="Submit">
+    <div>
+        <h2>Styling a div</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?</p>
+        <ul>
+            <li>CSS rule number 1</li>
+            <li>CSS rule number 2</li>
+            <li>CSS rule number 3</li>  
 
-
-
-    </form>
+        </ul>
+    </div>
 </body>
 </html>
