--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about us</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>All About Us</h1>
