feat: add link to The Net Ninja website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>CSS Basics</h1>
+    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?</p>
 
     <div>
