--- a/index.html
+++ b/index.html
@@ -3,23 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Basix</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Marioclub</title>
 </head>
 <body>
-    <h1>CSS Basics</h1>
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?</p>
-
-    <div>
-        <h2>Styling a div</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?</p>
-        <ul>
-            <li>CSS rule number 1</li>
-            <li>CSS rule number 2</li>
-            <li>CSS rule number 3</li>  
-
-        </ul>
-    </div>
+    
 </body>
 </html>
