feat: add dummy HTML file for CSS positioning and layout practice

--- a/index.html
+++ b/index.html
@@ -6,6 +6,46 @@
     <title>Marioclub</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Marioclub</h1>
+    </header>
+    <section class="banner">
+        <img src="images/banner.png" alt="marioclub welcome banner">
+        <div class="welcome">
+            <h2>Welcome to <br><span>Marioclub</span></h2>
+        </div>
+    </section>
+    <nav class="main-nav">
+        <ul>
+            <li><a href="join.html">Join The Club</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="games.html">Games</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+    <main>
+        <article>
+            <h2>Why Marioclub?</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? Ipsa id tenetur rem vero maxime expedita velit officia optio dicta eveniet, totam dolore?
+            </p>
+        </article>
+        <ul class="images">
+            <li><img src="images/thumb-1.png" alt="thumb 1"></li>
+            <li><img src="images/thumb-2.png" alt="thumb 2"></li>
+        </ul>
+    </main>
+    <section class="join">
+        <h2>Join The Club</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? 
+        </p>
+        <form>
+            <input type="email" name="email" placeholder="Enter your email and hit enter">
+        </form>
+    </section>
+    <footer>
+        <p class="copyright">&copy; copyright 2024 Marioclub</p>
+    </footer>
 </body>
 </html>
