fix: rename join class to join-us

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marioclub</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Marioclub</h1>
     </header>
     <section class="banner">
@@ -17,7 +18,7 @@
     </section>
     <nav class="main-nav">
         <ul>
-            <li><a href="join.html">Join The Club</a></li>
+            <li><a href="join.html"  class="join-us">Join The Club</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="games.html">Games</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -41,7 +42,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? 
         </p>
         <form>
-            <input type="email" name="email" placeholder="Enter your email and hit enter">
+            <input type="email" name="email" placeholder="Enter your email & hit enter">
         </form>
     </section>
     <footer>
