fix: add required attribute to the form input field

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tempora dolor quis. Nostrum minus ut consectetur? 
         </p>
         <form>
-            <input type="email" name="email" placeholder="Enter your email & hit enter">
+            <input type="email" name="email" placeholder="Enter your email & hit enter" required>
         </form>
     </section>
     <footer>
